<resources>
    <string name="app_name">Notas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Change the language (English)</string>
    <string name="action_settings2">Change the language (Spanish)</string>

    <string name="switch1">Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="deleting_message">Are you sure to eliminate this element?</string>
    <string name="title_dialog">What are you doing with this element?</string>
    <string name="Audios">Audios</string>
    <string name="Photos">Photos</string>
    <string name="Videos">Videos</string>
    <string name="Notes">Notes and Tasks</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="seccion_title">Communicate</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_name">Name</string>
    <string name="hint_note">Write your note...</string>


    <string name="str_en" >English</string>
    <string name="str_es" >Spanish</string>

    <string-array name="languages" >
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>



</resources>
