<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proyect.notas.addNota">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/swActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginRight="49dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="-1dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/swActivity"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNote"
            android:layout_width="332dp"
            android:layout_height="164dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/hint_note"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="157dp"
            android:layout_height="42dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="none"
            android:hint="@string/hint_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNote" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="157dp"
            android:layout_height="42dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="264dp"
            android:ems="10"
            android:inputType="none"
            android:hint="@string/hint_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="62dp"
            android:layout_height="44dp"


            android:layout_marginLeft="8dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="76dp"
            android:text="Ok"
            app:layout_constraintHorizontal_bias="0.718"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTime" />

        <Switch
            android:id="@+id/swRealizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="Realizada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.383"
            app:layout_constraintStart_toEndOf="@+id/ivAddNota"
            app:layout_constraintTop_toTopOf="@+id/etDate" />

        <ImageView
            android:id="@+id/ivAddNota"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTime" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
